--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://ClaudiaJKang.github.io"
-title = "johndoe"
+title = "Claudia J. Kang"
 theme = "hugo-coder"
 languagecode = "en"
 defaultcontentlanguage = "en"
@@ -11,19 +11,17 @@ pygmentsstyle = "bw"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-disqusShortname = "yourdiscussshortname"
+disqusShortname = "claudiajkang"
 
 [params]
-    author = "John Doe"
-    info = "Full Stack DevOps and Magician"
-    description = "John Doe's personal website"
+    author = "Claudia J. Kang / 강주희"
+    info = "Computer Engineering Student"
+    description = "Claudia J. Kang's personal website"
     keywords = "blog,developer,personal"
-    avatarurl = "images/avatar.jpg"
+    avatarurl = "https://avatars1.githubusercontent.com/u/17492826?s=460&v=4"
 
     favicon_32 = "/img/favicon-32x32.png"
     favicon_16 = "/img/favicon-16x16.png"
-
-    footercontent = "Enter a text here."
 
     hidecredits = false
     hidecopyright = false
@@ -38,24 +36,20 @@ disqusShortname = "yourdiscussshortname"
     name = "Github"
     icon = "fab fa-github fa-2x"
     weight = 1
-    url = "https://github.com/johndoe/"
+    url = "https://github.com/ClaudiaJKang/"
 [[params.social]]
-    name = "Gitlab"
-    icon = "fab fa-gitlab fa-2x"
+    name = "Linkedin"
+    icon = "fab fa-linkedin fa-2x"
     weight = 2
-    url = "https://gitlab.com/johndoe/"
+    url = "https://www.linkedin.com/in/claudiajkang/"
 [[params.social]]
-    name = "Twitter"
-    icon = "fab fa-twitter fa-2x"
+    name = "Medium"
+    icon = "fab fa-medium fa-2x"
     weight = 3
-    url = "https://twitter.com/johndoe/"
+    url = "https://medium.com/@claudiajkang/"
 
 # Menu links
 [[menu.main]]
-    name = "Blog"
-    weight = 1
-    url  = "/posts/"
-[[menu.main]]
     name = "About"
-    weight = 2
+    weight = 1
     url = "/about/"
